kubernetes/network/allow-project-only-ingress-networkpolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: deny-ingres
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-only-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector: {}
